--- a/Qt5/network/mainwindow.ui
+++ b/Qt5/network/mainwindow.ui
@@ -17,14 +17,24 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>100</y>
+      <x>140</x>
+      <y>170</y>
       <width>93</width>
       <height>28</height>
      </rect>
     </property>
     <property name="text">
      <string>PushButton</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>70</y>
+      <width>191</width>
+      <height>31</height>
+     </rect>
     </property>
    </widget>
   </widget>
@@ -34,7 +44,7 @@
      <x>0</x>
      <y>0</y>
      <width>400</width>
-     <height>26</height>
+     <height>23</height>
     </rect>
    </property>
   </widget>
